Reporting message stats from the Gateway service managers

--- a/MessagingMeshCoordinator/MessagingMeshCoordinator.csproj
+++ b/MessagingMeshCoordinator/MessagingMeshCoordinator.csproj
@@ -10,7 +10,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="..\MessagingMeshLib.NET\MessagingMeshLib.NET.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="config.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
