--- a/MessagingMeshCoordinator/MessagingMeshCoordinator.csproj
+++ b/MessagingMeshCoordinator/MessagingMeshCoordinator.csproj
@@ -1,6 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
+        <TargetFrameworks>net8.0;net10.0</TargetFrameworks>
         <OutputType>Exe</OutputType>
         <Platforms>x64</Platforms>
         <PlatformTarget>x64</PlatformTarget>
