--- a/TestClient.NET/TestClient.NET.csproj
+++ b/TestClient.NET/TestClient.NET.csproj
@@ -4,9 +4,7 @@
         <OutputType>Exe</OutputType>
         <Platforms>x64</Platforms>
         <PlatformTarget>x64</PlatformTarget>
-        <BaseOutputPath>$(SolutionDir)\build-output\Executables</BaseOutputPath>
-        <AppendPlatformToOutputPath>false</AppendPlatformToOutputPath>
-        <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+        <OutputPath>$(SolutionDir)\build-output\Executables\$(Configuration)\$(MSBuildProjectName)\</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
