--- a/MessagingMeshCoordinator/ClientApp/package.json
+++ b/MessagingMeshCoordinator/ClientApp/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
+    "@tanstack/react-table": "^8.21.3",
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
